--- a/.github/workflows/GitHubPages.yml
+++ b/.github/workflows/GitHubPages.yml
@@ -16,4 +16,7 @@ jobs:
     - name: GitHub Pages
       # You may pin to the exact commit or the version.
       # uses: crazy-max/ghaction-github-pages@eb08c35b9fab86751edfff4e55cd5cde35ff0e52
-      uses: crazy-max/ghaction-github-pages@v3.0.0
+      uses: crazy-max/ghaction-github-pages@v3.0.0        
+      with:
+        # Build directory to deploy
+        build_dir: public
