--- a/.github/workflows/Build To gh-pages.yml
+++ b/.github/workflows/Build To gh-pages.yml
@@ -32,5 +32,6 @@ jobs:
         with:
           # This is the branch you wish to deploy to, for example gh-pages or docs.
           branch: gh-pages
+          folder: build
 
 
