--- a/.github/workflows/Build To gh-pages.yml
+++ b/.github/workflows/Build To gh-pages.yml
@@ -24,6 +24,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
+      - name: Install and Build 🔧
+        run: |
+          yarn install
+          yarn run build      
 
       - name: Deploy to GitHub Pages
         # You may pin to the exact commit or the version.
