Update Build To gh-pages.yml

--- a/.github/workflows/Build To gh-pages.yml
+++ b/.github/workflows/Build To gh-pages.yml
@@ -37,6 +37,6 @@ jobs:
         with:
           # This is the branch you wish to deploy to, for example gh-pages or docs.
           branch: gh-pages
-          folder: build
+          folder: public
 
 
