--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   "scripts": {
     "build": "./extractMuiVersion.sh && gatsby build",
     "develop": "gatsby develop",
-    "deploy": "bash ./extractMuiVersion.sh && gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "./extractMuiVersion.sh && gatsby build --prefix-paths && gh-pages -d public",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
